--- a/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/FizzBuzz.cshtml
+++ b/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/FizzBuzz.cshtml
@@ -1,12 +1,37 @@
-﻿<!DOCTYPE html>
+﻿@{
+    int n = 100;
+}
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>FizzBuzz</title>
+    <link rel="stylesheet" href="C:\Users\awarner\austinwarner-c-exercises\m3-w1d4-views-part1-exercises\ViewsPart1.Exercises\StyleSheet1.css">
+    <title>Exercise 1 - FizzBuzz</title>
 </head>
 <body>
-    <div> 
+    <div>
+        <ul>
+            @for (int i = 0; i < n; i++)
+            {
+                if (i % 15 == 0 && i != 0)
+                {
+                    <li id="FizzBuzz">Fizzbuzz</li>
+                }
+                else if (i % 5 == 0 && i != 0)
+                {
+                    <li id="Buzz">Buzz</li>
+                }
+                else if (i % 3 == 0 && i != 0)
+                {
+                    <li id="Fizz">Fizz</li>
+                }
+                else
+                {
+                    <li>@i</li>
+                }
+            }
+        </ul>
     </div>
 </body>
 </html>
