--- a/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/Fibonacci.cshtml
+++ b/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/Fibonacci.cshtml
@@ -15,7 +15,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="C:\Users\awarner\austinwarner-c-exercises\m3-w1d4-views-part1-exercises\ViewsPart1.Exercises\StyleSheet1.css">
+    <link rel="stylesheet" href="~/StyleSheet1.css">
     <title>Exercise 2 - Fibanocci</title>
 </head>
 <body>
