--- a/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Film/Index.cshtml
+++ b/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Film/Index.cshtml
@@ -1,11 +1,7 @@
-﻿@using GetExercises.Web.DAL;
+﻿
 
-@model GetExercises.Web.Models.Film
-@{
-    private CategoryDAL genre = new CategoryDAL();
+@model GetExercises.Web.Models.FilmSearchByCategory
 
-
-}
 
 @{
     ViewBag.Title = "Index";
@@ -14,21 +10,18 @@
 <h2>Index</h2>
 
 
-@using (Html.BeginForm("SearchResult", "Film", FormMethod.Get)) 
-{    
-<div class="form-horizontal">
-    <h4>Film</h4>
-    <hr />
+@using (Html.BeginForm("SearchResult", "Film", FormMethod.Get))
+{
+    <div class="form-horizontal">
+        <h4>Film</h4>
+        <hr />
 
-    <div class="form-group">
-        @Html.Label("Category", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Editor("Category", new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.Label("Genre", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(m => m.Genre, new SelectList(Model.Genres), new { htmlAttributes = new { @class = "form-control" } })
+            </div>
         </div>
-    </div>
-    
-    <div class="form-group">
-        @Html.DropDownList(model => model.Categories  )
 
         <div class="form-group">
             @Html.Label("Minimum length", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -50,12 +43,12 @@
             </div>
         </div>
     </div>
-    }
+}
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
