WOOHOOgit add .! done with M3W2D2 finally

--- a/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Customer/Index.cshtml
+++ b/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Customer/Index.cshtml
@@ -42,7 +42,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Searh")
+    @Html.ActionLink("Back", "Search")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
