--- a/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Customer/SearchResult.cshtml
+++ b/m3-w2d2-controllers-part1-exercises/GetExercises.Web/Views/Customer/SearchResult.cshtml
@@ -7,7 +7,7 @@
 <h2>SearchResult</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New Search", "Index")
 </p>
 <table class="table">
     <tr>
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.DisplayName("Active Customer")
         </th>
         <th></th>
     </tr>
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
+            @Html.DisplayFor(modelItem => item.Active)
         </td>
     </tr>
 }
