running behind, need to finish controllers part 1. Part 2 is untouched

--- a/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Views/Shared/_Layout.cshtml
+++ b/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="@Url.Action("Index", "Home")">See all reviews</a></li>
-            <li><a href="@Url.Action("NewReview", "Home")">Submit a review</a></li>
+            <li><a href="@Url.Action("Index", "Review")">Submit a review</a></li>
         </ul>
     </nav>
     <section id="main-content">
