--- a/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Content/style.css
+++ b/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Content/style.css
@@ -75,8 +75,13 @@ section form label {
     padding-right: 10px;
 }
 
-section form div {
-    width: 50%;
+section div {
+    
+    padding: 15px;
+
 }
 
+section div:nth-child(even) {
+    background-color: #b4b4b4;
+}
 /* Individual Page Styles */
