--- a/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Content/style.css
+++ b/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Content/style.css
@@ -72,7 +72,7 @@ section form label {
     width: 200px;
     display: inline-block;
     text-align: right;
-    padding-right: 10px;
+    padding-right: 10px;-
 }
 
 section div {
@@ -85,3 +85,7 @@ section div:nth-child(even) {
     background-color: #b4b4b4;
 }
 /* Individual Page Styles */
+
+section .form-horizontal{
+    background-color: white;
+}
