end of day commit

--- a/m4-w1d2-csharp-history-geek-exercises/HistoryGeek.Web/Views/Shared/_Layout.cshtml
+++ b/m4-w1d2-csharp-history-geek-exercises/HistoryGeek.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
 
     <!-- EXERCISES -->
     <script src="~/Scripts/exercises/dom-exercises.js"></script>
+    <script src="~/Scripts/exercises/event-exerises.js"></script>
 
 </head>
 <body>
