9th test on presidents m4w1d2 does not pass, but the Jquery line works when entered into the console

--- a/m4-w1d2-csharp-history-geek-exercises/HistoryGeek.Web/Views/Shared/_Layout.cshtml
+++ b/m4-w1d2-csharp-history-geek-exercises/HistoryGeek.Web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <!-- EXERCISES -->
     <script src="~/Scripts/exercises/dom-exercises.js"></script>
     <script src="~/Scripts/exercises/event-exerises.js"></script>
+    <script src="~/Scripts/exercises/validation-exercises.js"></script>
 
 </head>
 <body>
