--- a/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/StyleSheet1.css
+++ b/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/StyleSheet1.css
@@ -2,12 +2,12 @@
     list-style-type : none;
 }
 
-#FizzBuzz{
+.FizzBuzz{
     color: purple;
 }
-#Buzz{
+.Buzz{
     color: red;
 }
-#Fizz{
+.Fizz{
     color: blue;
 }
