--- a/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/FizzBuzz.cshtml
+++ b/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/Views/Home/FizzBuzz.cshtml
@@ -12,19 +12,19 @@
 <body>
     <div>
         <ul>
-            @for (int i = 0; i < n; i++)
+            @for (int i = 1; i <= n; i++)
             {
                 if (i % 15 == 0 && i != 0)
                 {
-                    <li id="FizzBuzz">Fizzbuzz</li>
+                    <li class="FizzBuzz">Fizzbuzz</li>
                 }
                 else if (i % 5 == 0 && i != 0)
                 {
-                    <li id="Buzz">Buzz</li>
+                    <li class="Buzz">Buzz</li>
                 }
                 else if (i % 3 == 0 && i != 0)
                 {
-                    <li id="Fizz">Fizz</li>
+                    <li class="Fizz">Fizz</li>
                 }
                 else
                 {
